# PossWavSynth

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  Makefile  README.md  plot_csv
doc/html/: annotated.html  classes.html  cool__ints_8h.html  cool__ints_8h__dep__incl.map  cool__ints_8h__dep__incl.md5  cool__ints_8h__incl.map  cool__ints_8h__incl.md5  cool__ints_8h_source.html  data_8cpp.html  data_8cpp__incl.map  data_8cpp__incl.md5  data_8h.html  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h__incl.md5  data_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  md__r_e_a_d_m_e.html  melody_8cpp.html  melody_8cpp__incl.map  melody_8cpp__incl.md5  melody_8cpp_a102aff87b9528f465666dbf6c501bd50_icgraph.map  melody_8cpp_a102aff87b9528f465666dbf6c501bd50_icgraph.md5  melody_8cpp_a111ba7ad763c31a017138effe43011a6_icgraph.map  (+134 more)
doc/latex/: annotated.tex  cool__ints_8h.tex  cool__ints_8h__dep__incl.md5  cool__ints_8h__incl.md5  cool__ints_8h_source.tex  data_8cpp.tex  data_8cpp__incl.md5  data_8h.tex  data_8h__dep__incl.md5  data_8h__incl.md5  data_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  md__r_e_a_d_m_e.tex  melody_8cpp.tex  melody_8cpp__incl.md5  (+74 more)
lib/: CMakeLists.txt
mid/: a_melody.mid  licc.mid
src/: Data.cpp  Data.h  Signal.cpp  Signal.h  WavData.hpp  cool_ints.h  data.cpp  data.h  main.cpp  melody.cpp  melody.h  oscillator.cpp  oscillator.h  wav.cpp  wav.h  wavetable.cpp  wavetable.h
tools/: plot_csv.py
(+108 files in other folders)
